clusters/talos-cluster/temporal/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-ui-route
  namespace: temporal
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: gateway
  hostnames:
  - "temporal.horus.maix.ovh"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: temporal-ui-service
      port: 8080
