clusters/talos-cluster/temporal/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-route
  namespace: temporal
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "temporal.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: temporal-ui
          port: 80
